# AI_Econ_daioe_months_v2

./: .gitignore  README.md  app.py  main.py  pyproject.toml  scb_months_15_to_25.ipynb  ssyk12_daioe_months.ipynb
.github/workflows/: 01_scb_pull_to_daioe_pull.yml  02_daioe_pull_to_development.yml
data/: scb_months.parquet  scb_months_lvl1.parquet
