[project]
name = "ai-econ-daioe-months-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=3.0.2",
    "pathlib>=1.0.1",
    "plotly>=6.7.0",
    "polars>=1.40.1",
    "shiny>=1.6.0",
    "shinywidgets>=0.8.0",
    "statsmodels>=0.14.6",
]
